Logo shadow effect and bug fixes for dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body nav {
 .navbar-brand {
     display: flex;
     align-items: center;
+    text-shadow: 3px 2px 2px grey;
 }
 
 #brand-logo {
